# qbe-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  rust-toolchain.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/: releasing.md
docs/superpowers/plans/: 2026-04-27-tiny-basic-example-compiler.md
docs/superpowers/specs/: 2026-04-27-tiny-basic-example-compiler-design.md
examples/: hello_world.rs  tiny_basic.rs
examples/tiny_basic/: README.md  factorial.bas  fibonacci.bas  hello.bas  main.rs
src/: lib.rs  tests.rs
