[package]
name = "qbe"
version = "4.0.0"
edition = "2021"
authors = ["Garrit Franke <garrit@slashdev.space>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/garritfra/qbe-rs"
keywords = ["qbe", "compiler", "ir"]
categories = ["compilers"]
description = "QBE IR for Rust"

[dependencies]
